[gd_scene load_steps=6 format=2]

[ext_resource path="res://Snake/SnakePart.gd" type="Script" id=1]
[ext_resource path="res://assets/snakesprites/png/snake_yellow_head_32.png" type="Texture" id=2]
[ext_resource path="res://Ultility/Hurtbox.gd" type="Script" id=3]
[ext_resource path="res://assets/snakesprites/png/snake_yellow_blob_32.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="SnakePart" type="Node2D"]
script = ExtResource( 1 )

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Head" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
region_rect = Rect2( 8, 24, 8, 8 )

[node name="Area2D" type="Area2D" parent="." groups=["snake"]]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="HurtBox" type="Area2D" parent="."]
collision_mask = 8
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 1 )

[connection signal="receive_damage" from="HurtBox" to="." method="_on_HurtBox_receive_damage"]
